feat: refactor code and and validations